--- a/front/src/app/items/[id]/Id.module.scss
+++ b/front/src/app/items/[id]/Id.module.scss
@@ -5,7 +5,7 @@
     border-radius: 4px;
     height: 100%;
     padding: 16px;
-    margin-bottom: 32px;
+    margin: 32px 0px;
     display: flex;
     justify-content: space-between;
     @media screen and (max-width: 768px){
