--- a/front/src/components/ImageProduct/ImageProduct.module.scss
+++ b/front/src/components/ImageProduct/ImageProduct.module.scss
@@ -3,8 +3,10 @@
     height: 180px;
 }
 .imageLarge{
-    width: 680px;
-    height: 680px;
+    width: 100%;
+    height: 100%;
+    max-width: 680px;
+    max-height: 680px;
     @media screen and (max-width: 768px){
         width: 100%;
         height: 100%;
